# SPDX-FileCopyrightText: © 2019-2020, 2024 Alexandros Theodotou <alex@zrythm.org>
# SPDX-License-Identifier: LicenseRef-ZrythmLicense

# subdir ('cpp-yyjson')
subdir ('doctest')
subdir ('juce')
subdir ('kissfft')
subdir ('midilib')
subdir ('qm-dsp')
# subdir ('reflect-cpp')
subdir ('weakjack')
subdir ('whereami')
subdir ('zita-resampler')
