# SPDX-FileCopyrightText: © 2020, 2023-2024 Alexandros Theodotou <alex@zrythm.org>
# SPDX-License-Identifier: LicenseRef-ZrythmLicense

subdir ('utils')

enum_files = gnome.mkenums_simple('enum-types',
  sources: [
    'dsp/port_identifier.h',
    'dsp/region.h',
    'dsp/tempo_track.h',
    'plugins/plugin_descriptor.h',
    'plugins/plugin_identifier.h',
    'project.h',
    ],
  )
